--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "element-ui": "^1.2.5",
     "vue": "^2.2.2",
+    "vue-loader": "^11.1.4",
+    "vue-localstorage": "^0.1.3",
+    "vue-parallaxy": "^1.0.2",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
